--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -24,6 +24,7 @@ a:visited {
 
 .fixedHeaderContainer header .headerTitleWithLogo {
   color : white;
+  display: block !important;
 }
 
 .navigationSlider .slidingNav ul a {
@@ -76,6 +77,37 @@ a:visited {
 .container .wrapper .alignLeft h2 {
   margin-top: 10px;
   margin-bottom: 5px;
+}
+
+
+@media only screen and (max-device-width: 480px) {
+  .productShowcaseSection .featureBlock {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .featureBlock .imageAlignTop .blockImage {
+    margin-bottom: 0;
+  }
+
+  .featureBlock .blockContent h2 {
+    margin-top: 0;
+    margin-bottom: 5px;
+  }
+
+  .featureBlock .blockContent {
+    margin-bottom: 25px;
+  }
+
+  .homeSplashFade img {
+    width : 60px;
+    height : 60px;
+  }
+
+  .homeSplashFade h1 {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
