Left-align feature text

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -72,7 +72,7 @@ a:visited {
   max-height: 60px;
 }
 .featureBlock .blockContent > div p {
-  text-align: justify;
+  text-align: left;
 }
 .libBlock > div p {
   text-align: center;
