remove lightBackground class that breaks dark mode

--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -70,13 +70,9 @@
   max-height: 16px;
 }
 
-.lightBackground {
-  background: #f7f7f7;
-}
-
 .getStarted:hover {
   background: #fff;
-  color: var(--ifm-color-primary)
+  color: var(--ifm-color-primary);
 }
 
 .secondTitle {
