--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -20,6 +20,25 @@
   --ifm-color-primary-light: #825ac2;
   --ifm-color-primary-lighter: #9b7bce;
   --ifm-color-primary-lightest: #b49cda;
-  --ifm-font-size-base: 16px;
-  --ifm-code-font-size: 100%;
 }
+
+
+@media screen and (max-width: 996px) {
+  :root {
+    --ifm-font-size-base: 15px;
+  }
+}
+
+@media screen and (min-width: 997px) {
+  :root {
+    --ifm-font-size-base: 17px;
+  }
+}
+
+.docusaurus-highlight-code-line {
+  background-color: rgb(72, 77, 91);
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+}
+
