tweak codeblock, use line highlighting

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -20,6 +20,7 @@
   --ifm-color-primary-light: #825ac2;
   --ifm-color-primary-lighter: #9b7bce;
   --ifm-color-primary-lightest: #b49cda;
+  --ifm-code-font-size: 90%;
 }
 
 
