workaround for highlighting toc

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -34,3 +34,7 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+a.contents__link > code {
+  color: inherit;
+}
