align inline code snippet style with current rsk site
- border radius should be 3px
- bg color should be rgba(27, 31, 35, 0.05)

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -14,6 +14,8 @@
   --ifm-color-primary-lighter: #9b7bce;
   --ifm-color-primary-lightest: #b49cda;
   --ifm-code-font-size: 95%;
+  --ifm-code-border-radius: 3px;
+  --ifm-code-background: rgba(27, 31, 35, 0.05);
 }
 
 @media screen and (max-width: 996px) {
