--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -16,6 +16,7 @@
   --ifm-code-font-size: 95%;
   --ifm-code-border-radius: 3px;
   --ifm-code-background: rgba(27, 31, 35, 0.05);
+  --ifm-link-color: blue;
 }
 
 @media screen and (max-width: 996px) {
@@ -43,4 +44,8 @@ a.contents__link > code {
 
 a.contents__link.contents__link--active {
   font-weight: 600;
+}
+
+a:visited {
+  color: var(--ifm-color-primary);
 }
