--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -49,3 +49,19 @@ a.contents__link.contents__link--active {
 a:visited {
   color: var(--ifm-color-primary);
 }
+
+.pagination-nav .pagination-nav__link {
+  transition: all 0.2s ease;
+  border-color: var(--ifm-color-primary);
+}
+.pagination-nav__link .pagination-nav__link--label {
+  color: var(--ifm-color-primary);
+}
+.pagination-nav__link:hover {
+  background: var(--ifm-color-primary);
+  color: white;
+}
+
+.pagination-nav__link:hover * {
+  color: white;
+}
