--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -16,6 +16,9 @@
   --ifm-code-font-size: 95%;
   --ifm-code-border-radius: 3px;
   --ifm-code-background: rgba(27, 31, 35, 0.05);
+
+  --ifm-blockquote-color: #ecf4f9;
+  --ifm-blockquote-color-dark: #cbddea;
 }
 
 @media screen and (max-width: 996px) {
@@ -28,6 +31,13 @@
   :root {
     --ifm-font-size-base: 17px;
   }
+}
+
+blockquote {
+  color: var(--ifm-font-base-color);
+  background-color: var(--ifm-blockquote-color);
+  border-left: 6px solid var(--ifm-blockquote-color-dark);
+  border-radius: var(--ifm-global-radius);
 }
 
 .docusaurus-highlight-code-line {
