Update side category menu styling to match main Redux site

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -98,6 +98,31 @@ a:visited {
   color: white;
 }
 
+.menu__link {
+  font-weight: normal;
+}
+
+.menu__link--sublist {
+  color: var(--ifm-font-base-color) !important;
+  font-weight: var(--ifm-font-weight-semibold);
+}
+
+.menu .menu__link.menu__link--sublist:after {
+  transform: rotateZ(180deg);
+  -webkit-transition: -webkit-transform 0.2s linear;
+  transition: -webkit-transform 0.2s linear;
+  transition-property: transform, -webkit-transform;
+  transition-duration: 0.2s, 0.2s;
+  transition-timing-function: linear, linear;
+  transition-delay: 0s, 0s;
+  transition: transform 0.2s linear;
+  transition: transform 0.2s linear, -webkit-transform 0.2s linear;
+}
+
+.menu .menu__list-item.menu__list-item--collapsed .menu__link--sublist:after {
+  transform: rotateZ(90deg);
+}
+
 .admonition {
   color: var(--ifm-font-base-color);
   border-radius: var(--ifm-global-radius);
@@ -129,3 +154,4 @@ a:visited {
   fill: black;
   stroke: black;
 }
+
