--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -19,6 +19,8 @@
 
   --ifm-blockquote-color: #ecf4f9;
   --ifm-blockquote-color-dark: #cbddea;
+
+  --ifm-pre-background: rgb(39, 40, 34);
 }
 
 @media screen and (max-width: 996px) {
@@ -45,6 +47,11 @@ blockquote {
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
+}
+
+code {
+  background-color: var(--ifm-color-emphasis-300);
+  border-radius: 0.2rem;
 }
 
 a code,
