--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -13,12 +13,16 @@
   --ifm-color-primary-light: #825ac2;
   --ifm-color-primary-lighter: #9b7bce;
   --ifm-color-primary-lightest: #b49cda;
+
   --ifm-code-font-size: 95%;
   --ifm-code-border-radius: 3px;
   --ifm-code-background: rgba(27, 31, 35, 0.05);
 
   --ifm-blockquote-color: #ecf4f9;
   --ifm-blockquote-color-dark: #cbddea;
+  
+  --ifm-code-padding-vertical: 0.1rem;
+  --ifm-code-padding-horizontal: 0.2rem;
 
   --ifm-pre-background: rgb(39, 40, 34);
 
