Light background on callouts in darkmode

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -63,8 +63,8 @@ blockquote {
 }
 
 html[data-theme='dark'] blockquote {
-  border-left-color: var(--ifm-color-primary);
-  background: var(--ifm-pre-background);
+   border-left-color: var(--ifm-color-primary);
+   color: #000;
 }
 
 .docusaurus-highlight-code-line {
