Add styling for blockquotes on darkmode (#615)
* Add styling for blockquotes on darkmode

* Light background on callouts in darkmode

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -62,6 +62,11 @@ blockquote {
   border-radius: var(--ifm-global-radius);
 }
 
+html[data-theme='dark'] blockquote {
+   border-left-color: var(--ifm-color-primary);
+   color: #000;
+}
+
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
   display: block;
