--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -24,6 +24,9 @@
   --ifm-code-padding-vertical: 0.1rem;
   --ifm-code-padding-horizontal: 0.2rem;
 
+  --ifm-tabs-padding-vertical: 0.2rem;
+  --ifm-tabs-padding-horizontal: 0.4rem;
+
   --ifm-pre-background: rgb(39, 40, 34);
   --ifm-alert-color: black;
 
@@ -101,13 +104,11 @@ code {
   border-radius: 0.2rem;
 }
 
-
 a code,
 code a {
   background-color: var(--ifm-color-emphasis-200);
   color: inherit;
 }
-
 
 a.contents__link > code {
   color: inherit;
