- Expand on `Cached Data` page - Relocate cache invalidation sections from `Mutations` page to `Cached Data`

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -202,7 +202,7 @@ a:visited {
 }
 
 .diagonal-cell {
-  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' preserveAspectRatio='none' viewBox='0 0 100 100'><line x1='0' y1='0' x2='100' y2='100' stroke='black' vector-effect='non-scaling-stroke'/></svg>");
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' preserveAspectRatio='none' viewBox='0 0 100 100'><line x1='0' y1='0' x2='100' y2='100' stroke='rgb(218,221,225)' vector-effect='non-scaling-stroke'/></svg>");
   background-size: 100% 100%;
 }
 
