Docs - add 'Cached data' concept page (#1036)
Co-authored-by: Lenz Weber <mail@lenzw.de>

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -200,3 +200,25 @@ a:visited {
   fill: black;
   stroke: black;
 }
+
+.diagonal-cell {
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' preserveAspectRatio='none' viewBox='0 0 100 100'><line x1='0' y1='0' x2='100' y2='100' stroke='rgb(218,221,225)' vector-effect='non-scaling-stroke'/></svg>");
+  background-size: 100% 100%;
+}
+
+.diagonal-cell--content {
+  display: grid;
+  width: max-content;
+  justify-content: space-between;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+}
+
+.diagonal-cell--topRight {
+  grid-column-start: 2;
+  text-align: right;
+}
+
+.diagonal-cell--bottomLeft {
+  grid-column-start: 1;
+}
