--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -77,6 +77,16 @@
   --ifm-hero-text-color: #ffffff;
 }
 
+.admonition a,
+blockquote a {
+  color: var(--ifm-color-primary-darkest);
+  text-decoration: none;
+}
+.admonition a:hover,
+blockquote a:hover {
+  color: var(--blockquote-text-color);
+}
+
 blockquote {
   color: var(--blockquote-text-color);
   background-color: var(--ifm-blockquote-color);
