--- a/examples/action-listener/counter/src/index.css
+++ b/examples/action-listener/counter/src/index.css
@@ -13,7 +13,9 @@ code {
 }
 
 h1 {
+  text-align: center;
   font-size: 2.5rem;
+  margin: 1rem 0;
 }
 
 @media screen and (min-width: 780px) {
@@ -22,7 +24,6 @@ h1 {
   }
 }
 
-h1,
 h2,
 h3 {
   margin: 0.5rem 0;
